Fix Items endpoint